# madison-rs

./: Cargo.toml  README.md  Rocket.toml  sources.list
src/: lib.rs  madison_web.rs  main.rs
src/madison_web/: templates.rs
