[package]
name = "madison-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
deb-version = "*"
fapt = { git = "https://github.com/OddBloke/fapt", branch = "codename" }
log = "*"
rocket = "0.5.0-rc.2"
tabled = "*"
