[package]
name = "madison-rs"
version = "0.1.0"
edition = "2021"
default-run = "madison-web"

[dependencies]
anyhow = "*"
deb-version = "*"
fapt = { git = "https://github.com/OddBloke/fapt", branch = "master" }
figment = "*"
log = "*"
rayon = "*"
rocket = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
rocket_prometheus = "0.10.0-rc.3"
serde = "*"
tabled = "*"
tokio = { version = "1", features = ["full"] }
